# attendance

./: README.md  add_purpose_labels.sql  app.py  create_employee_schedules.sql  employee_schedules_schema.md  fix_existing_data.py  models.py  payroll.db  pdf_payslip.py  pyproject.toml  repair_database.py  replit.md  requirements.txt  run_migration.py
templates/: base.html  index.html
templates/admin/: 13th_month.html  activity_logs.html  admins.html  attendance.html  auth_codes.html  base_admin.html  branches.html  dashboard.html  employees.html  login.html  payroll.html  payroll_view.html  settings.html
templates/tablet/: station.html
