[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "reportlab>=4.4.6",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]
