[project]
name = "3dbotics-attendance"
version = "1.0.0"
description = "3DBotics Attendance & Payroll Management System"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-session>=0.8.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0",
    "reportlab>=4.4.6",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
    "bcrypt>=4.2.0",
    "supabase>=2.0.0",
]
